[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/flor/0000.png" type="Texture" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Insanibc.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Insanibu.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/background/bg 21.06.52.png" type="Texture" id=5]
[ext_resource path="res://assets/abelha/0004.png" type="Texture" id=6]
[ext_resource path="res://assets/abelha/0003.png" type="Texture" id=7]
[ext_resource path="res://assets/abelha/0001.png" type="Texture" id=8]
[ext_resource path="res://assets/abelha/0000.png" type="Texture" id=9]
[ext_resource path="res://assets/abelha/0002.png" type="Texture" id=10]
[ext_resource path="res://assets/background/2.png" type="Texture" id=12]
[ext_resource path="res://scripts/bee.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0
height = 46.0

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 108
outline_size = 6
font_data = ExtResource( 4 )

[node name="main" type="Node"]
script = ExtResource( 2 )

[node name="bg" type="Node2D" parent="."]

[node name="base" type="Sprite" parent="bg"]
position = Vector2( 361, 640 )
texture = ExtResource( 5 )

[node name="bee" type="Node2D" parent="."]
position = Vector2( 362, 1167 )
script = ExtResource( 15 )

[node name="anim" type="AnimatedSprite" parent="bee"]
frames = SubResource( 1 )
playing = true

[node name="bee" type="Area2D" parent="bee"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bee/bee"]
position = Vector2( -1, 1 )
shape = SubResource( 2 )

[node name="container" type="Node" parent="."]

[node name="timer-spider-spawn" type="Timer" parent="."]
autostart = true

[node name="timer-flower-spawn" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="hud" type="Node2D" parent="."]

[node name="top" type="Sprite" parent="hud"]
position = Vector2( 361, 100 )
texture = ExtResource( 12 )

[node name="life1" type="Sprite" parent="hud"]
position = Vector2( 50, 95 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="life2" type="Sprite" parent="hud"]
position = Vector2( 146, 95 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="life3" type="Sprite" parent="hud"]
position = Vector2( 248, 95 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="flower" type="Sprite" parent="hud"]
position = Vector2( 540, 86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="score" type="Label" parent="hud"]
margin_left = 562.0
margin_top = 62.0
margin_right = 711.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score-text" type="Label" parent="hud"]
margin_left = 491.0
margin_top = 7.0
margin_right = 708.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
text = "pontos"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life-text" type="Label" parent="hud"]
margin_left = 22.0
margin_top = 7.0
margin_right = 279.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
text = "Vidas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameover" type="Node2D" parent="."]

[node name="gemeover-text" type="Label" parent="gameover"]
visible = false
margin_left = 104.0
margin_top = 613.0
margin_right = 628.0
margin_bottom = 734.0
custom_colors/font_color = Color( 0.617188, 0.422733, 0.071766, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Gameover"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Timer" parent="gameover"]
wait_time = 3.0

[connection signal="area_entered" from="bee/bee" to="." method="_on_bee_area_entered"]
[connection signal="timeout" from="timer-spider-spawn" to="." method="_on_timerspiderspawn_timeout"]
[connection signal="timeout" from="timer-flower-spawn" to="." method="_on_timerflowerspawn_timeout"]
[connection signal="timeout" from="gameover/restart" to="." method="_on_restart_timeout"]
